Week 2 Fixed title. Fixed repeats and color contrast in Css

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -1,63 +1,3 @@
-#menu {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    text-decoration: none;
-    padding: 0.5rem 0.75rem;
-    color: #000;
-}
-
-#menu::before {
-    content: "≡";
-}
-
-/*nav {
-    background-color: purple;
-}
-
-.navigation {
-    list-style: none;
-    margin: 0 auto;
-    max-width: 760px;
-}
-
-.navigation li {
-    display: none;
-}
-
-.navigation a {
-    display: block;
-    padding: 0.75rem;
-    text-align: left;
-    text-decoration: none;
-    color: black;
-    font-weight: 700;
-    transition: 0.5s;
-    font-size: clamp(1rem, 2vmin, 1.5rem);
-} */
-
-/* .navigation a:hover,
-.navigation a:active {
-    color: white;
-    background-color: black;
-}
-
-.show li {
-    display: block;
-}
-
-#menu.show::before {
-    content: "X";
-} */
-
-/* header {
-    background-color: #bbb;
-    display: grid;
-    grid-gap: 1rem;
-    padding: 20px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-} */
-
 .header {
     display: flex;
     align-items: flex-start;
@@ -85,7 +25,7 @@ main {
     font-weight: 700;
     text-decoration: none;
     padding: 0.5rem 0.75rem;
-    color: #000;
+    color: white;
     margin-left: auto;
 }
 
@@ -110,7 +50,7 @@ nav ul {
 
 nav a {
     display: block;
-    color: black;
+    color: white;
     text-align: center;
     padding: 1rem;
     text-decoration: none;
@@ -186,7 +126,7 @@ figcaption {
 
 footer {
     background: purple;
-    color: black;
+    color: white;
     padding: 2rem;
     text-align: center;
     grid-column: 1 / 4;
